# daily_macro_brief_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  architecture.md  costs.md  memo.md  plan.md  pyproject.toml  readme.md  spec.md
.github/workflows/: daily_brief.yml
app/: delivery.py  main.py  models.py  pipeline.py  settings.py
app/config/: app.yaml  chart_templates.yaml  portfolio.yaml  recipients.yaml  sources.yaml  themes.yaml  vol_params.yaml
app/data/: calendar.py  market.py
app/discovery/: orchestrator.py
app/discovery/scouts/: base.py  central_bank.py  consensus.py  news.py  x.py  (+2 more)
app/llm/: litellm_compat.py  prompt_registry.py  provider.py
app/render/: chart_codegen.py  chart_selector.py  chart_uploader.py  chart_windowing.py  charts.py  email.py  github_push.py
app/synthesis/: deduper.py  ranker.py  validator.py  writer.py
memo/: memo.md
outputs/: sample_brief.html  sample_brief.txt
outputs/samples/: sample_brief.html  sample_brief.txt
scripts/: debug_live_run.py  demo_chart.py  live_eval_run.py  update_vol_params.py
tests/: test_calendar.py  test_chart_uploader.py  test_cli.py  test_config.py  test_deduper.py  test_delivery.py  test_discovery.py  test_github_push.py  test_live_eval_run.py  test_llm.py  test_market.py  test_models.py  test_pipeline_sample.py  test_ranker.py  test_render.py  test_sample_mode_contract.py  test_validator.py  test_vol_params.py  test_writer.py
tests/fixtures/: calendar_sample.json  chart_series_reference_20260510_113122_us10y_copper.json  evidence_sample.json  market_sample.json
(+14 files in other folders)
