[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-macro-brief"
version = "0.1.0"
description = "Scheduled Python pipeline that produces a PM-facing Daily Macro Brief"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "litellm==1.83.14",
    "sendgrid>=6.11",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "databento>=0.40",
    "pandas>=2.0",
    "xai-sdk>=1.3.1",
    "grpcio>=1.60",
    "openai>=1.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
